# csp-llm

./: .gitignore  README.md  environment.yml  pyproject.toml
benchmark/: DATASHEET.md  __init__.py  fit_reference.py  protocol.py  reference_model.json  run_leaderboard.py  submit_template.py
configs/: llama3_8b.yaml  mistral_7b.yaml  qwen25_7b.yaml  qwen3_8b.yaml
experiments/: agg_deploy_seeds.py  agg_idea2.py  analyze_budget_quality.py  analyze_ceiling.py  analyze_expand_tost.py  analyze_expand_tost_clustered.py  analyze_panel_strengthen.py  analyze_qaware_win.py  analyze_quant.py  analyze_robustness.py  analyze_seed_robustness.py  analyze_serving_calib.py  assemble_pareto.py  bench_wcet_gpu.py  build_atlas.py  compute_c3_served_auc.py  compute_c7_oracle_miss.py  consolidate_quest.py  fig_framework.py  fig_proxy_vs_quality.py  fig_redund_calib.py  fig_transfer_gap.py  fig_whyhard.py  fit_guardkv_budgeter.py  gen_fig_drift_multiturn.py  gen_multikey_niah.py  gen_multikey_real.py  gen_uuid_kv.py  generate_figures.py  offload_decode_bench.py  parse_design_deploy.py  parse_e2e_confirm.py  parse_e2e_quality.py  parse_native_deploy.py  quant_sensitivity.py  run_budget16k.sh  run_budget_generic.sh  run_budget_sweep.sh  run_ceiling_log.sh  run_ceiling_raisers.sh  (+50 more)
scripts/: collect_multiturn.py  collect_traces.sh  collect_traces_attn.py  collect_traces_dual.sh  download_assets.sh  download_mistral_only.sh  fix_trace_request_ids.py  migrate_lzq_assets.sh  monitor_pipeline.sh  run_benchmarks.sh  run_collect_4models.sh  run_collect_expanded.sh  run_faithful_quest.sh  run_ga100_pipeline.sh  run_token_granularity.sh  setup_conda.sh  train_predictor.sh  verify_trace_splits.py
tests/: test_budgeter.py  (+13 more)
(+71 files in other folders)
